# DriverEmulator

./: .gitignore  CMakeLists.txt  vshacks.h
cmake/: flags.cmake
emulated/fltmgr/: CMakeLists.txt
emulated/fltmgr/src/: main.c
emulated/ntoskrnl/: CMakeLists.txt
emulated/ntoskrnl/cmake/: flags.cmake
emulated/ntoskrnl/src/: keprocess.h  main.c  types.h
emulated/ntoskrnl/src/allocator/: allocator.c  allocator.h
emulated/ntoskrnl/src/dbg/: dbg.c  dbg.h
emulated/ntoskrnl/src/ex/: ex.c  ex.h  io.c
emulated/ntoskrnl/src/mdl/: mdl.c  mdl.h
emulated/ntoskrnl/src/ntdll/: wrapper.c  wrapper.h
emulated/ntoskrnl/src/process/: process.c  process.h
emulated/ntoskrnl/src/thread/: thread.c  thread.h
src/: main.cpp
src/PE/: PortableExecutable.cpp  PortableExecutable.h
src/Utils/: FileUtils.h
